# codename-cemflow

./: .clang-format  .cpro.json  .cpro_metadata.json  .en_US.cspl  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ccpp.yml
applications/: CMakeLists.txt
applications/cmk/: CMakeLists.txt  cmk.cpp  errors.hpp  filesystem.hpp  run_config.hpp
applications/cspl/: CMakeLists.txt  cspl.cpp  cspl.hpp  filesystem.hpp  log.hpp  main.cpp  run_config.cpp  run_config.hpp
applications/cspl/dictionary/: custom_dictionary.cpp  custom_dictionary.hpp  dictionary.cpp  dictionary.hpp
applications/cspl/processing/: char_filter.cpp  char_filter.hpp  common.hpp  file_sink.hpp  file_source.cpp  file_source.hpp  filter_buffer.cpp  filter_buffer.hpp  hunspell_checker.cpp  hunspell_checker.hpp  hunspell_fixer.cpp  hunspell_fixer.hpp  item_iterator.hpp  item_sink.hpp  item_source.hpp  stdio_source.cpp  stdio_source.hpp  word_converter.cpp  word_converter.hpp
applications/git-info/: CMakeLists.txt  main.cpp
cmk/: cmk.cpp
lib/: CMakeLists.txt
lib/hunspell-dictionary/: CMakeLists.txt
lib/libcmake/: CMakeLists.txt  cmake.cpp  cmake.hpp
lib/lotrame/: CMakeLists.txt  lotrame.cpp
lib/lotrame/include/: lotrame.hpp
lib/lotrame/include/lotrame/: common.hpp  engine.hpp  log_handler.hpp  queue.hpp  trace.hpp
lib/lotrame/src/: engine.cpp  log_handler.cpp  trace.cpp
lib/utilities/: CMakeLists.txt
lib/utilities/include/utilities/: env.hpp  version.hpp
lib/utilities/src/: env.cpp  version.cpp
libcmake/: cmake.cpp  cmake.hpp  libcmake.cpp
